--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-simple-snackbar": "^1.1.11",
     "styled-components": "^5.3.6",
+    "styled-react-modal": "^3.0.1",
     "styled-reset": "^4.4.4",
     "web-vitals": "^2.1.4"
   },
